force-app/main/default/objects/TOP_Flow__mdt/TOP_Flow__mdt.object-meta.xml
<CustomObject>
    <description>Metadata to define flow for product activation in Telia Onboarding Portal</description>
    <label>TOP Flow</label>
    <pluralLabel>TOP Flows</pluralLabel>
</CustomObject>