force-app/main/default/objects/TOP_Flow__mdt/fields/Flow_Dependency__c.field-meta.xml
<CustomField>
    <fullName>Flow_Dependency__c</fullName>
    <description>Comma separated list of Flows ( api names ). Unable to start this flow when mentioned ones are completed.</description>
    <inlineHelpText>Comma separated list of Flows ( api names ). Unable to start this flow when mentioned ones are completed.</inlineHelpText>
    <label>Flow Dependency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>