force-app/main/default/objects/TOP_Flow__mdt/fields/Flow_Name__c.field-meta.xml
<CustomField>
    <fullName>Flow_Name__c</fullName>
    <description>Custom label which contains translated flow name to display in the portal</description>
    <inlineHelpText>Custom label which contains translated flow name to display in the portal</inlineHelpText>
    <label>Flow Name (Custom Label Ref)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>