force-app/main/default/objects/TOP_Flow__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Activate/Deactivate flow to be displayed in portal</description>
    <inlineHelpText>Activate/Deactivate flow to be displayed in portal</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>