force-app/main/default/objects/TOP_Flow__mdt/fields/Is_Home_Office_Flow__c.field-meta.xml
<CustomField>
    <fullName>Is_Home_Office_Flow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Home Office Flow</label>
    <type>Checkbox</type>
</CustomField>