force-app/main/default/objects/TOP_Flow__mdt/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <description>Order value the flow list is sorted by</description>
    <inlineHelpText>Order value the flow list is sorted by</inlineHelpText>
    <label>Order</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>