force-app/main/default/objects/TOP_Flow__mdt/fields/Product_Code_Filter__c.field-meta.xml
<CustomField>
    <fullName>Product_Code_Filter__c</fullName>
    <description>Comma separated product codes used in &quot;Activation Line&quot; object to add line to the list</description>
    <inlineHelpText>Comma separated product codes used in &quot;Activation Line&quot; object to add line to the list</inlineHelpText>
    <label>Product Code Filter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>