force-app/main/default/objects/TOP_Flow__mdt/fields/Product_Families__c.field-meta.xml
<CustomField>
    <fullName>Product_Families__c</fullName>
    <description>Comma separated product families used in &quot;Activation Line&quot; object to add line to the list</description>
    <inlineHelpText>Comma separated product families used in &quot;Activation Line&quot; object to add line to the list</inlineHelpText>
    <label>Product Families</label>
    <length>255</length>
    <type>Text</type>
</CustomField>