force-app/main/default/objects/TOP_Flow__mdt/fields/Product_Groups__c.field-meta.xml
<CustomField>
    <fullName>Product_Groups__c</fullName>
    <description>Comma separated product groups in Quote with quantity &gt; 0  to display this flow</description>
    <inlineHelpText>Comma separated product groups in Quote with quantity &gt; 0  to display this flow</inlineHelpText>
    <label>Product Groups in Quote</label>
    <length>255</length>
    <type>Text</type>
</CustomField>