force-app/main/default/objects/TOP_Flow__mdt/fields/Start_Flow_Label__c.field-meta.xml
<CustomField>
    <fullName>Start_Flow_Label__c</fullName>
    <description>Label of the button to start the flow, custom label reference</description>
    <inlineHelpText>Label of the button to start the flow, custom label reference</inlineHelpText>
    <label>Start Flow Label (Custom Label Ref)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>