force-app/main/default/objects/TOP_Flow__mdt/fields/Steps__c.field-meta.xml
<CustomField>
    <fullName>Steps__c</fullName>
    <description>Comma separated list of Flow Steps( api names )</description>
    <inlineHelpText>Comma separated list of Flow Steps( api names )</inlineHelpText>
    <label>Steps</label>
    <length>255</length>
    <type>Text</type>
</CustomField>