force-app/main/default/objects/TOP_Flow__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Flow_Name__c</columns>
    <columns>Product_Families__c</columns>
    <columns>Product_Groups__c</columns>
    <columns>Steps__c</columns>
    <columns>Flow_Dependency__c</columns>
    <columns>Order__c</columns>
    <columns>Is_Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>